--- a/src/index.scss
+++ b/src/index.scss
@@ -111,7 +111,7 @@
 					width: 100%;
 					height: 100%;
 					padding: 0 1rem;
-					background-color: var(--c3);
+					background-color: color(light);
 					overflow-y: auto;
 					overflow-x: hidden;
 					box-shadow: -4px -4px 40px color(dark, 0.1);
